[metadata]
name = sg2t
author = David Chassin
author_email = dchassin@stanford.edu
license = BSD-3
license_file = LICENSE
url = https://github.com/dchassin/olypen
description = Data accessor for the Olympic Peninsula Smartgrid Demonstration Project
long_description = file: README.md

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires = file: requirements.txt

[options.extras_require]
all =
test =
    unittest
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "source" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  source/__init*
  source/conftest.py
  source/*setup_package*
  source/tests/*
  source/*/tests/*
  source/extern/*
  source/version*
  */source/__init*
  */source/conftest.py
  */source/*setup_package*
  */source/tests/*
  */source/*/tests/*
  */source/extern/*
  */source/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_